--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
         }*/
     }  
 
-    .two {
+    /* .two {
       column-count: 2;
       -webkit-column-count: 2;
       -moz-column-count: 2;
@@ -32,14 +32,14 @@
       column-count: 1;
       -webkit-column-count: 1;
       -moz-column-count: 1;
-    }
+    } */
 
-    @page :left {
+    @page:left {
         margin-left: 15mm;
         margin-right: 25mm;
       }
       
-      @page :right {
+      @page:right {
         margin-left: 25mm;
         margin-right: 15mm;
       }
