two columns solved

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
         }*/
     }  
 
-    /* .two {
+    .two {
       column-count: 2;
       -webkit-column-count: 2;
       -moz-column-count: 2;
@@ -32,7 +32,7 @@
       column-count: 1;
       -webkit-column-count: 1;
       -moz-column-count: 1;
-    } */
+    }
 
     @page:left {
         margin-left: 15mm;
