--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,44 @@
         }*/
     }  
 
+    .wrapper {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 10px;
+      /* grid-auto-rows: minmax(100px, auto); */
+    }
+    .one {
+      grid-column: 1 / 2;
+      /* grid-row: 1; */
+    }
     .two {
+      grid-column: 2 / 4;
+      /* grid-row: 1 / 3; */
+    }
+    /* .three {
+      grid-column: 1;
+      grid-row: 2 / 5;
+    }
+    .four {
+      grid-column: 3;
+      grid-row: 3;
+    }
+    .five {
+      grid-column: 2;
+      grid-row: 4;
+    }
+    .six {
+      grid-column: 3;
+      grid-row: 4;
+    } */
+    
+    
+    .twoCol {
       column-count: 2;
       -webkit-column-count: 2;
       -moz-column-count: 2;
     }
-    .one {
+    .oneCol {
       column-count: 1;
       -webkit-column-count: 1;
       -moz-column-count: 1;
