--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@
     font-family: 'Literata-Italic';
     src: url('../fonts/Literata-Italic.ttf') format('truetype');
 
+    font-family: 'Compagnon-Roman.woff';
+    src: url('../fonts/Compagnon-Roman.woff') format('truetype');
+
+    font-family: 'NotCourierSans.ttf';
+    src: url('../fonts/NotCourierSans.ttf') format('truetype');
+
     /*font-family: 'Literata-Regular';
     src: url('../fonts/Literata-Regular.woff') format('truetype');*/
   }
@@ -29,7 +35,7 @@
     .wrapper {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      grid-gap: 8px;
+      grid-gap: 14px;
       /* grid-auto-rows: minmax(100px, auto); */
     }
     .one {
@@ -72,6 +78,7 @@
       font-family: 'Literata-Italic';
     } */
 
+
     @page:left {
         margin-left: 15mm;
         margin-right: 25mm;
@@ -105,19 +112,19 @@ p {
     font-size: 9pt;
     font-family: 'Literata-Regular', serif;
     font-weight: normal;
-    page-break-inside: avoid;
-    line-height: 115%;
+    /* page-break-inside: avoid; */
+    line-height: 120%;
 }
 
 h1 {
     border: none;
     text-align: left;
     text-decoration-color: black;
-    font-size: 32pt;
+    font-size: 18pt;
     font-family: 'Literata-Regular', serif;
     font-weight: normal;
-    page-break-inside: avoid;
-    line-height: 105%;
+    /* page-break-inside: avoid; */
+    line-height: 120%;
 }
 
 h2 {
@@ -158,4 +165,11 @@ h5 {
     font-family: 'Literata-Regular', serif;
     font-weight: normal;
     line-height: 110%;
+}
+
+.footnote {
+  font-family: 'NoCourierSans', monospace;
+  font-size: 8pt;
+  text-transform: uppercase;
+  color: gray;
 }
