--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
     font-family: 'Literata-Italic';
     src: url('../fonts/Literata-Italic.ttf') format('truetype');
 
+    font-family: 'Literata-Bold';
+    src: url('../fonts/Literata-Bold.ttf') format('truetype');
+
+    font-family: 'Literata-BoldItalic';
+    src: url('../fonts/Literata-BoldItalic.ttf') format('truetype');
+
     font-family: 'Compagnon-Roman.woff';
     src: url('../fonts/Compagnon-Roman.woff') format('truetype');
 
@@ -86,9 +92,18 @@
       }
 
       @page:right{
-        @top-right {
+        @top-right-corner {
           content: counter(page);
         }
+
+        @top-left{
+          content: string(doctitle);
+            grid-column: 1 / 3;
+            margin-right: 50px;
+            font-family: 'Literata-Regular', serif;
+            text-transform: uppercase;
+            font-size: 8pt;
+          }
       }
       
       @page:left{
@@ -109,7 +124,7 @@ p {
     font-family: 'Literata-Regular', serif;
     font-weight: normal;
     /* page-break-inside: avoid; */
-    line-height: 120%;
+    line-height: 125%;
 }
 
 h1 {
@@ -119,8 +134,10 @@ h1 {
     font-size: 18pt;
     font-family: 'Literata-Regular', serif;
     font-weight: normal;
-    /* page-break-inside: avoid; */
-    line-height: 120%;
+    /* page-break-before: always; */
+    page-break-after: avoid;
+    line-height: 0%;
+    string-set: doctitle content(); 
 }
 
 h2 {
@@ -164,8 +181,14 @@ h5 {
 }
 
 .footnote {
+  font-family: 'Literata-Bold', serif;
+  font-size: 8pt;
+  /* color: gray; */
+}
+
+.caption {
   font-family: 'NoCourierSans', monospace;
   font-size: 8pt;
   text-transform: uppercase;
-  color: gray;
+  /* color: gray; */
 }
