--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@
       /* grid-auto-rows: minmax(100px, auto); */
     }
     .one {
+      margin-top: 50px;
       grid-column: 1 / 2;
       /* grid-row: 1; */
     }
@@ -131,17 +132,55 @@
   font-size: 8pt;
 }
 
+/* * {
+	border: 1px dotted;
+  color: black
+} */
+
+
+aside{
+  margin: 0;
+  padding: 0;
+  /* border: 1px solid black; */
+  text-align: left;
+  text-decoration-color: black;
+  font-size: 12px;
+  font-family: 'Literata-Regular', serif;§
+  font-weight: normal;
+  /* page-break-inside: avoid; */
+  line-height: 16px;
+  /* background-color: blue; */
+  /* margin-bottom: 7pt; */
+}
+
+section{
+  margin: 0;
+  padding: 0;
+  /* border: 1px solid black; */
+  text-align: left;
+  text-decoration-color: black;
+  font-size: 12px;
+  font-family: 'Literata-Regular', serif;§
+  font-weight: normal;
+  /* page-break-inside: avoid; */
+  line-height: 16px;
+  /* background-color: blue; */
+  /* margin-bottom: 7pt; */
+}
+
+
 p {
     margin: 0;
     padding: 0;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     text-align: left;
     text-decoration-color: black;
     font-size: 12px;
-    font-family: 'Literata-Regular', serif;
+    font-family: 'Literata-Regular', serif;§
     font-weight: normal;
     /* page-break-inside: avoid; */
     line-height: 16px;
+    /* background-color: blue; */
     /* margin-bottom: 7pt; */
 }
 
@@ -149,8 +188,7 @@ h1 {
     margin-top: 0;
     margin-bottom: 64px;
     padding: 0;
-    border-top: none;
-    /* border-bottom: 16px; */
+    /* border: 1px solid black; */
     text-align: left;
     text-decoration-color: black;
     font-size: 24px;
@@ -166,20 +204,20 @@ h2 {
     border: none;
     text-align: left;
     text-decoration-color: black;
-    font-size: 24pt;
+    font-size: 11pt;
     font-family: 'Literata-Regular', serif;
     font-weight: normal;
-    line-height: 110%;
+    line-height: 100%;
 }
 
 h3 {
-    border: none;
-    text-align: left;
-    text-decoration-color: black;
-    font-size: 20pt;
-    font-family: 'Literata-Regular', serif;
-    font-weight: normal;
-    line-height: 110%;
+  border: none;
+  text-align: left;
+  text-decoration-color: black;
+  font-size: 10pt;
+  font-family: 'Literata-Regular', serif;
+  font-weight: normal;
+  line-height: 100%;
 }
 
 h4 {
@@ -203,10 +241,9 @@ h5 {
 }
 
 .footnote {
-  margin: 1px;
-  padding: 0;
-  border: 1px;
-  border-color: black;
+  margin-top: 0px;
+  padding-top: 0px;
+  /* border: 1px solid black; */
   font-family: 'Literata-Bold', serif;
   font-size: 10px;
   line-height: 16px;
@@ -214,13 +251,23 @@ h5 {
 }
 
 .fnnum {
-  margin: 1px;
+  margin: 0;
   padding: 0;
-  border: 1px;
-  border-color: black;
+	/* border: 1px solid black; */
   font-family: 'NotCourierSans-Bold', monospace;
   font-size: 10px;
-  line-height: 16px;
+  line-height: 100%;
+  background-color: aqua;
   /* text-transform: uppercase; */
   color: deeppink;
+}
+
+.quote {
+  margin-top: 0px;
+  padding: 0px, 10px;
+  /* border: 1px solid black; */
+  font-family: 'Literata-Regular', serif;
+  font-size: 10px;
+  line-height: 16px;
+  /* color: gray; */
 }
