--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@
       }
     }
 
-    img { max-width: 100% }
+    /* img { max-width: 100% } */
 
 }  
 
@@ -140,7 +140,7 @@
 
 aside{
   margin: 0;
-  padding: 0;
+  padding-top: 0px;
   /* border: 1px solid black; */
   text-align: left;
   text-decoration-color: black;
@@ -171,7 +171,7 @@ section{
 
 p {
     margin: 0;
-    padding: 0;
+    padding-left: 30px;
     /* border: 1px solid black; */
     text-align: left;
     text-decoration-color: black;
@@ -247,6 +247,8 @@ h5 {
   font-family: 'Literata-Bold', serif;
   font-size: 10px;
   line-height: 16px;
+  page-break-before: always;
+  page-break-after: avoid;
   /* color: gray; */
 }
 
@@ -264,10 +266,32 @@ h5 {
 
 .quote {
   margin-top: 0px;
-  padding: 0px, 10px;
+  padding: 0px;
+  /* border: 1px solid black; */
+  font-family: 'Literata-Italic', serif;
+  font-size: 11px;
+  line-height: 16px;
+  /* color: gray; */
+}
+
+.biblio {
+  margin-top: 0px;
+  padding: 0px;
   /* border: 1px solid black; */
   font-family: 'Literata-Regular', serif;
   font-size: 10px;
   line-height: 16px;
   /* color: gray; */
+}
+
+#h1intro {
+  page-break-before: avoid;
+}
+
+#footnoteIntro {
+  page-break-before: avoid;
+}
+
+#biblio {
+  page-break-before: always;
 }
