--- a/css/style.css
+++ b/css/style.css
@@ -255,12 +255,14 @@
   }
 
   .width{
+    max-width: 100%
     /* max-width: 100% */
     height: 220px;
   }
 
   .caption {
     margin: 0px;
+    padding: 0px;
     padding-top: 5px;
     /* background-color: aqua; */
     /* border: 1px solid black; */
