--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@
     font-family: 'NotCourierSans-Bold', monospace;
     font-size: 10px;
     line-height: 100%;
-    background-color: aqua;
+    background-color: yellow;
     /* text-transform: uppercase; */
     color: deeppink;
   }
